[gd_scene load_steps=15 format=3 uid="uid://cscumksn7qbxd"]

[ext_resource type="Script" path="res://scripts/coin.gd" id="1_4ene3"]
[ext_resource type="Texture2D" uid="uid://bmya53w1vkhv8" path="res://assets/sprites/coin.png" id="1_cyd1j"]
[ext_resource type="Shader" path="res://shaders/soul.gdshader" id="2_xebfj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wdjdm"]
bounce = 0.6

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_eixk7"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hjy5p"]
resource_local_to_scene = true
shader = ExtResource("2_xebfj")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_y5yib"]
atlas = ExtResource("1_cyd1j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n0wp"]
atlas = ExtResource("1_cyd1j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw382"]
atlas = ExtResource("1_cyd1j")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cct0"]
atlas = ExtResource("1_cyd1j")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y1x4"]
atlas = ExtResource("1_cyd1j")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ohhu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5yib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n0wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw382")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cct0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y1x4")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mvgg4"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lh7fq"]
radius = 13.0

[node name="coin" type="RigidBody2D"]
z_index = 6
collision_layer = 8
collision_mask = 8
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_wdjdm")
lock_rotation = true
script = ExtResource("1_4ene3")

[node name="CoinSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_eixk7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_hjy5p")
sprite_frames = SubResource("SpriteFrames_5ohhu")
autoplay = "default"
frame_progress = 0.910872

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mvgg4")

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="PickupShape" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource("CircleShape2D_lh7fq")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_detect_player_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
